# cp2k

./: CMakeLists.txt  README_cmake.md  benchmark.sh  benchmark_batch.sh  parse_results.sh
arch/: Darwin-gnu-arm64.psmp  Darwin-gnu-arm64.ssmp  Eiger-mc-gnu.psmp  Eiger-mc-intel.psmp  Linux-gnu-aarch64.psmp  Linux-gnu-x86_64.psmp  Linux-intel-x86_64.psmp
benchmarks/QS/: H2O-128.inp  H2O-256.inp  H2O-32.inp  H2O-512.inp  H2O-64.inp
ci/: baseimage.Dockerfile  baseimage.cpu.Dockerfile  baseimage.cpu.Fedora37.Dockerfile  baseimage.cpu.Fedora38.Dockerfile  baseimage.cuda.Dockerfile  baseimage.cuda.ubuntu.Dockerfile  baseimage.rocm.Dockerfile  build.Dockerfile  cscs-daint.yml  cscs.yml
cmake/: FindArmpl.cmake  FindAtlas.cmake  FindBLAS.cmake  FindBlas.cmake  FindElpa.cmake  FindFftw.cmake  FindFlexiBLAS.cmake  FindLapack.cmake  FindLibINT2.cmake  FindLibSPG.cmake  FindLibVDWXC.cmake  FindLibVORI.cmake  FindLibXC.cmake  FindLibXSMM.cmake  FindLibint2.cmake  FindMKL.cmake  FindMetis.cmake  FindOpenBLAS.cmake  FindPTSCOTCH.cmake  FindPlumed.cmake  FindPtscotch.cmake  FindQuip.cmake  FindSCALAPACK.cmake  FindSCI.cmake  FindSuperLU.cmake  cmake_cp2k.sh  cp2kConfig.cmake.in  cp2k_utils.cmake
cmake/modules/: FindGRPP.cmake  FindLibXC.cmake
src/: CMakeLists.txt  cp2k_info.F  hirshfeld_methods.F  input_cp2k_dft.F  input_cp2k_global.F  input_cp2k_pwdft.F  mixed_cdft_methods.F  mp2_eri_gpw.F  mp2_ri_grad.F  pwdft_environment.F  pwdft_environment_types.F  qmmm_image_charge.F  qs_cdft_methods.F  qs_cdft_utils.F  qs_collocate_density.F  qs_integrate_potential_product.F  qs_integrate_potential_single.F  qs_linres_current.F  qs_rho0_ggrid.F  sirius_interface.F
src/fm/: cholesky_dla.cpp  cp_fm_cholesky.F  dlaf.F
src/grid/: Makefile  PACKAGE  coefficients.c  coefficients.h  collocation_integration.c  collocation_integration.h  doc.tex  grid.c  grid.h  grid_api.F  grid_collocate.F  grid_collocate.c  grid_collocate.h  grid_collocate_cpu.c  grid_collocate_cpu.h  grid_collocate_gpu.c  grid_collocate_gpu_cuda.cu  grid_collocate_miniapp.c  grid_collocate_replay.c  grid_collocate_replay.h  grid_collocate_unittest.c  grid_common.h  grid_context.cc  grid_fast.F  grid_integrate.F  grid_integrate_cpu.c  grid_prepare_pab.c  grid_prepare_pab.h  grid_replay.c  grid_task_list.c  grid_task_list.cc  grid_task_list.h  grid_test  non_orthorombic_corrections.c  non_orthorombic_corrections.h  tensor_local.h  thpool.c  thpool.h  tmp.c  utils.c  (+1 more)
src/grid/common/: Interval.hpp  grid_basis_set.c  grid_basis_set.h  grid_buffer.c  grid_common.h  grid_constants.h  grid_context.hpp  grid_info.hpp  grid_library.c  grid_library.h  grid_prepare_pab.h  grid_process_vab.h  grid_tasklist_private.h  task.hpp  task_list_info.h  tensor.hpp  tensor_local.c  tensor_local.h  utils.c  utils.h
src/grid/cpu/: coefficients.cc  coefficients.hpp  collocation_integration.cc  collocation_integration.hpp  cpu_handler.cc  cpu_handler.hpp  cpu_private_header.hpp  grid_collocate_cpu.cc  grid_collocate_dgemm.cc  grid_collocate_dgemm.hpp  grid_context_cpu.cc  grid_context_cpu.hpp  grid_cpu_task_list.c  grid_cpu_task_list.h  grid_info.hpp  grid_integrate_cpu.cc  grid_integrate_dgemm.cc  grid_prepare_pab_cpu.cc  grid_prepare_pab_dgemm.cc  grid_prepare_pab_dgemm.hpp  non_orthorombic_corrections.cc  non_orthorombic_corrections.hpp  tensor.hpp  tensor_local.cc  tensor_local.hpp  utils.cc  utils.hpp
src/grid/dgemm/: coefficients.c  coefficients.h  collocation_integration.c  collocation_integration.h  grid_collocate_dgemm.c  grid_collocate_dgemm.h  grid_cpu_task_list.c  grid_cpu_task_list.h  grid_integrate_dgemm.c  grid_prepare_pab_dgemm.c  grid_prepare_pab_dgemm.h  non_orthorombic_corrections.c  private_header.h
src/grid/gpu/: PACKAGE  gpu_backend.cc  grid_collocate_gpu.c  grid_collocate_gpu.h  grid_collocate_gpu_cuda.cu  grid_gpu_collocate.cu  grid_gpu_integrate.cu  grid_gpu_internal_header.h  grid_gpu_task_list.cu  grid_gpu_task_list.h
src/grid/gpu/cuda/: PACKAGE  acc.hpp  grid_gpu_collint.h  grid_gpu_collocate.cu  grid_gpu_integrate.cu  grid_gpu_internal_header.h
src/grid/gpu/headers/: PACKAGE  matrix.hpp
src/grid/gpu/include/: gpu_backend.hpp  grid_gpu_internal_header.h
src/grid/hip/: grid_hip_context.cu  grid_hip_context.h  grid_hip_integrate.cu
src/grid/ref/: grid_collocate_ref.h  grid_prepare_pab_ref.c  grid_prepare_pab_ref.h  grid_ref_collocate.c  grid_ref_internal_header.h  grid_ref_prepare_pab.c  grid_ref_prepare_pab.h  grid_ref_task_list.c  grid_ref_task_list.h  grid_task_list_ref.c  grid_task_list_ref.h
src/mpiwrap/: message_passing.F
src/start/: cp2k_runs.F
tests/QMMM/QS/regtest-3/: TEST_FILES
tests/QMMM/QS/regtest-image/: TEST_FILES
tests/QS/regtest-cdft-hirshfeld/: TEST_FILES
tests/QS/regtest-dft-vdw-corr-1/: TEST_FILES
tests/QS/regtest-dm-ls-scf-3/: TEST_FILES
tests/QS/regtest-gapw/: TEST_FILES
tests/QS/regtest-gpw-2-2/: TEST_FILES
tests/QS/regtest-gpw-3/: TEST_FILES
tests/QS/regtest-gpw-4/: TEST_FILES
tests/QS/regtest-hole-funct/: TEST_FILES
tests/QS/regtest-nonortho/: graphite.inp
tests/QS/regtest-ot/: TEST_FILES
tests/QS/regtest-ot-2/: TEST_FILES
tests/QS/regtest-pao-2/: TEST_FILES
tests/SIRIUS/regtest-1/: NiO-plus-u.inp  TEST_FILES
tools/docker/: Dockerfile.test_cmake  generate_dockerfiles.py
tools/docker/scripts/: build_cp2k_cmake.sh  install_misc.sh
tools/spack/: cp2k-dependencies.yaml
tools/toolchain/scripts/: install_sirius.sh
tools/toolchain/scripts/stage3/: install_libgrpp.sh
tools/toolchain/scripts/stage4/: install_cosma.sh
tools/toolchain/scripts/stage8/: install_sirius.sh  install_spfft.sh  install_spla.sh
